--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ spacy
 stanza
 streamlit
 sentence-transformers>=2.2.2
+sentencepiece
+protobuf<4.0.0  # pour stanza
+# Pour éviter les problèmes de compatibilité avec protobuf
+protobuf<4.25.0  # pour transformers
