--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit==1.35.0
 spacy==3.7.2
 stanza==1.8.1
-transformers==4.41.1
-torch
-sentencepiece>=0.1.99,<0.2.0
+transformers==4.41.2
+torch>=2.0.0
